--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,19 +116,19 @@ body {
 }
 .boxShodow:hover {
   box-shadow:
-    rgba(31, 223, 100, 1) 0px 2px 5px -1px,
-    rgba(31, 223, 100, 1) 0px 1px 3px -1px;
-  /* -webkit-box-shadow: 0px 0px 11px -3px rgba(31,223,100,1);
-    -moz-box-shadow: 0px 0px 11px -3px rgba(31,223,100,1);
-    box-shadow: 0px 0px 11px -3px rgba(31,223,100,1); */
+    rgba(255, 223, 31, 1) 0px 2px 5px -1px,
+    rgba(255, 223, 31, 1) 0px 1px 3px -1px;
+  /* -webkit-box-shadow: 0px 0px 11px -3px rgba(255,223,31,1);
+    -moz-box-shadow: 0px 0px 11px -3px rgba(255,223,31,1);
+    box-shadow: 0px 0px 11px -3px rgba(255,223,31,1); */
 }
 
 .userIcon:focus-within #icon {
-  color: #1fdf64; /* Change the icon color when the input is focused */
+  color: #ffdf1f; /* Change the icon color to yellow when the input is focused */
 }
 .mailIcon:focus-within #icon {
-  color: #1fdf64; /* Change the icon color when the input is focused */
+  color: #ffdf1f; /* Change the icon color to yellow when the input is focused */
 }
 .textIcon:focus-within #icon {
-  color: #1fdf64; /* Change the icon color when the input is focused */
+  color: #ffdf1f; /* Change the icon color to yellow when the input is focused */
 }
